--- a/Analytical/analytical/absock.html
+++ b/Analytical/analytical/absock.html
@@ -1,7 +1,5 @@
 ﻿<pre>
-Absock
-   
-Human.Asck.Utlize.Computer.Requires.Electronic
+Absock.Human.Asck.Utilize.Computer.Requires.Electronic
   Voltage:high,low
   Chip Circit 
   Human.Computer.Readable.Source:
@@ -51,16 +49,43 @@ Digits.High^Low.Definte:Olympick.ZeroNeo
       
   HexeH
     Byte
-
 Half-Life.Unicode
 
-Afd
-Pain.Mutrual.Index
-  of aaf
-Human.Career.Essue.Raise.Eassy
-  Doctor
-  Computer
-NumberDigit,NumberQuntaint.Assmbily,Compile
+Absocket.Bodypart.Analytick.GlobleHabit //ionic-fond.html
+
+/* Articles will be written; of AaF*/
+Human.kareer.Essue
+  Genetic.Geodem.Never.AngerKolourt
+  BengPlaint.Anti-Utmost.PortalEdge //平淡无奇 人类角度 
+  PainMax.Keywordiz
+    HumanHell
+  Pain.Mutrual.Index
+  Doctor.ComputerSerialize
+Eassy.Raise.Continue
+
+Human.HandyCapiable.ComputingArt //Afd Artfond
+  Article
+    Users.OfficeWork
+    Developer.PythonLike.ProgrammingStyle
+  Fond
+    Users.Career.Account.Excel
+    Users.Stock.Watching
+    Users.Hardware.Joystick.Develop
+      Xbox.RedAlert3.Joystick.HandleMost
+      Robot
+  Draw
+    Gender.DiamondFemale.Intigue
+      ColorStir^z 
+    Developer.HardFirst.Dcibt.ApartFrom.Hands
+
+  Disables.Bodypart.Piroity.Utilize
+  Disabled.DiasterAnaylsiz（Nick Vujicic）尼克·胡哲
+Leon.Earth.RoleTablet.Hardsoft.Experience.Most
+Artfond.Analyticko.Artlisense //Artilysiz
+
+Number
+  Digit
+  Quntaint.Assmbily,Compile
     digit.argus.vesaid.rollback
     word.example:tablet
 </pre>
