--- a/Autodesk/desk/ayric-pixel.html
+++ b/Autodesk/desk/ayric-pixel.html
@@ -1,12 +1,8 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
-	<head>
-		<title></title>
-	</head>
-	<body>
+﻿
 <pre>
-Ionic-fond.html
-Kount Kondet  Count  //读数    
+Ayrical.Pixel //Ionic-Fond.html
+
+Kount Kondet Count  //读数    
   Numeric.Renlie.Doline:l - l - l 一 l 一 l
   Number.GlobelHabit.VerticalWriting.Count: llll //个：四 4 叫法：four  
   Number.Keyboard.AngeCorner~Arcline:1 2 3 4 5 6 7 8 9 
@@ -43,22 +39,53 @@ Kount Kondet  Count  //读数
 
 Screen.ErickPixed
 Single~Globe
-  Number.DualDefined:sin odd //两义性 圆形丈量
-    Dualist.Renlie.Agreed
+  Number.DualDefined:sin odd // 圆形丈量出现两义性
+    Dualist.Renlie.Agreed.However.Alienate.KansaiF
     Renliy.BenchMark.Intersect -l- +
   Number:Fondant Rectent
     ionic.count.wrappered:numeric:single globe
-  Trycode:Number
-    fond.fact.rect :try.tic.tek
-    sin.dot: . 
-    bin.num: 
-      l O 
+
+Aboriginals.HandSketch.GroupGlobal?.Sequence
+  Dot.Start
+  Drip.Process
+  Lined.End
+
+Civilize;.Kulture
+  FastKeyword.Anaytick
+    Group.HandKount.HuntFarm.Exchange
+  Human.Source.Bargaining.EvenSquare
+    Language.SymbolSourced.FastComfort.KountCharacter
+    EyeVision.Seened.Solid.Sketched
+    *NeverKnow.Vesaid.BrainKomout
+     //起源.弘微引顺 关键词：疼 记 铯 牵引式
+      //光 水 不（止步) 性 需 要 营（房字) 养（羊）
+      //喝 吃 循环
+     //动物 打杀 地球第一事件 最疼全身经历群组 领导谁 动物细胞哪里
+     //源值 生长 看似不动其实也动
+     // 知道 打忘  人类现今角度.生死 端口
+     //语言不通 达成一致 文化交流 翻译 但是精准吗
+     //翻译不精 人种不同 代沟 空间穿刺 地理
+    Human.English.Number:Single.Odd
+    Chinese.Translated.Coreget.CultureAccuercy//单 复 双？
+    Another.Langange.Started.SourceFrom
+      single 
+        double //computer & math
+      odd //math what if without the invention of computer
+    Civilized.Kultured.Still.Bargain
+        Even
+        Group    
+  Renliy.Controversy.Academic
+Culture.Civilize.Computer
+
+
+Kareer:Electric.DigitSigal.Fondket.Trycode //个量 度数
+    bin.num:  //mind the l O 
       0 1
-    bin.num.and.let.are.dup// 11 aa duplicatine ?
-  
-    let.asc
+    *duplicate 00 11
+      dup 
+    chr:asc
       ab ba ac ca bc cb
-    byc.num-let 
+    byc.num-chr chr-num 
      1a 1b 1c 1d  
      a1 b1 c1 d1
     tyc.klr
@@ -66,17 +93,15 @@ Single~Globe
     tyc://Analytical/analytical/func/permutation.html
       num.let.num
       let.num.let 
-
-    Number.Direct.Metrik
+    Number.DirectMetrik
       ndm.num.eit:1 2 3 4 5 6 7 8 0
       ndm.num.ten.1 2 3 4 5 6 7 8 9 0
       ndm.num.hex:0x1 0xA 0xB 0x3
     Mytric.Seq:Byc-Tyc:Dyx
-   
 
-    fond.dwf.num:1111 2222 3333 4444 //数4个
-    fond.dwf.mic:a111 111b 1a1b 1ab1
-    fond.dwf.tyc.klr
+   dwf.num:1111 2222 3333 4444 //数4个
+   dwf.tyc.klr
+   dwf.foc:a111 111b 1a1b 1ab1
       b y r g.x //wjcking.analytick.earth.source.from.skycolor
       rgb grb rbg brg
     //@^ 铯角 介入角动作 
@@ -98,8 +123,5 @@ Qualificate //量
   EarthHuman.Operator +-*/ Sqrt Mod
   Fond.Method
   Tryant.Colorize
-Each-Group
-
+Each-Group.Cybert
 </pre>
-	</body>
-</html>
