--- a/Autodesk/desk/ayric-pixel.html
+++ b/Autodesk/desk/ayric-pixel.html
@@ -1,6 +1,6 @@
 ﻿
 <pre>
-Ayrical.Pixel //Ionic-Fond.html
+Ayrical.Pixet //Ionic-Fond.html
 
 Kount Kondet Count  //读数    
   Numeric.Renlie.Doline:l - l - l 一 l 一 l
@@ -77,51 +77,33 @@ Civilize;.Kulture
   Renliy.Controversy.Academic
 Culture.Civilize.Computer
 
-
-Kareer:Electric.DigitSigal.Fondket.Trycode //个量 度数
+HumanKareer:Electric.DigitSigal.Fondket.Trykodye //个量 度数
+  GlobalHabit.FromLeft.RighHand.Write
     bin.num:  //mind the l O 
       0 1
     *duplicate 00 11
       dup 
     chr:asc
-      ab ba ac ca bc cb
-    byc.num-chr chr-num 
-     1a 1b 1c 1d  
-     a1 b1 c1 d1
-    tyc.klr
+      ab ba
+      ca ab 
+    byc.num-chr chr-num:
+      1a 1b  1c1d  
+      a1 b1  c1d1
+    *tyc.klr 
+        After DRAWN pixel dot, then try kodye again screenly
+        Camery.Leonic.Ionic.Sumit
+        ?KoloringSypce.VolumnSaved
       r g b
-    tyc://Analytical/analytical/func/permutation.html
-      num.let.num
-      let.num.let 
-    Number.DirectMetrik
-      ndm.num.eit:1 2 3 4 5 6 7 8 0
-      ndm.num.ten.1 2 3 4 5 6 7 8 9 0
-      ndm.num.hex:0x1 0xA 0xB 0x3
-    Mytric.Seq:Byc-Tyc:Dyx
+    tyc.fod://Analytical/analytical/func/permutation.html
+      num.chr.num
+      chr.num.chr 
+    Number.DirectX
+        eit ten hex 
+    Mytrik.Sequence:Byc-Tyc:Dyx
 
-   dwf.num:1111 2222 3333 4444 //数4个
-   dwf.tyc.klr
-   dwf.foc:a111 111b 1a1b 1ab1
-      b y r g.x //wjcking.analytick.earth.source.from.skycolor
-      rgb grb rbg brg
-    //@^ 铯角 介入角动作 
-    1
-    1 2
-    1 2 3
-    //@# 钲钫  介入角动作 
-    1
-    1 2
-    1 2 3
-    1 2 3 4
-  Kodyix.Fond
+FondKet.Solid.AxisDirectively.Absock.Artfod //absock.html AFD
 
-  KoloringSypce.VolumnSaved
-    FullFilled
-  ColorZero.Based
-    Dwf Numeric
-Qualificate //量
-  EarthHuman.Operator +-*/ Sqrt Mod
-  Fond.Method
-  Tryant.Colorize
+Fond.Method
+Compiler.Math.Operator //+-*/ Sqrt Mod
 Each-Group.Cybert
 </pre>
