--- a/Rastera/asnic/quest/keyword.html
+++ b/Rastera/asnic/quest/keyword.html
@@ -52,3 +52,24 @@ fragment
 磁铁
 夜光石
 金 形状
+
+matter // 实词：表示实在意义的词，有名词、动词、形容词、数词、量词、代词。?
+null:虚词：不表示dao实在意义而表示语法意义的词，有：副词、介词、连词、助词、叹词、拟声词。
+
+//  nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary ;
+bai,nouns (n.) 名词 表示人或事物的名称 box,pen,tree,apple
+du,pronouns (pron.) 代词代替名词、数词、形容词we,this,them,myself
+adjectives(adject.) 形容词, 用来修饰zhi名词,表示人或事物的特征 good,sad,high,short
+numerals(num.) 数词表示数目或顺序 one,two,first
+verb (v)  动词,表示动作或状态 jump,sing,visit
+adverbs（adv.) 副词, 修饰动、形、副等词,表示动作特征 there,widely,suddenly
+articles (art)  冠词,用在名词前,帮助说明名词所指的范围 a,an,the
+prepositions (prep)  介词, 用在名词或代词前,说明它与别的词的关系 in,on,down,up
+conjunctions (conj)   连词,表示人或事物的名称if,because,but
+interjections (int)  感叹词, 代替名词、数词、形容词等 oh,hello,hi,yeah
+是及物动词,vt.后必须跟宾语：sing a song
+是不及物动词,vi.后不直接带宾语或不带宾语:jump high
+auxiliary 助词:就是、罢了、而已、云云、来着、也好、不成、已而、得了、着哩、也罢、着呢、伍的、便了、的话、啷当、
+imperative 祈使句
+
+
