--- a/Analytical/analytical/cybert.html
+++ b/Analytical/analytical/cybert.html
@@ -1,21 +1,18 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+﻿
 <pre>
 Cybert
   Separator Connector Bracket
 Symbol.Keyboard.Keyset
-  Carect:!@$ 
+  Karact:!@$ //Carect
+    Keyboard.Symbol
+      Char   Half-Angle /!,.$
+     Wchar ?consist  Entire-Angle //。，！￥ 
   Number:123 
   Letter:abc  
 Organize.Classify  
   Single Group
-    Verb: Each Group
   Particle Batch
+    Verb: Each Batch Group
   Sypole Global
 Dcibt.Bodypart
     eye-contact ear-listen mouth-speak   mouth-movement nose-dragout
@@ -43,6 +40,3 @@ Artfod Preditor
     //Row~s Col^s  Rowlet 
 
 </pre>
-
-</body>
-</html>
