--- a/Autodesk/desk/ayric-pixel.html
+++ b/Autodesk/desk/ayric-pixel.html
@@ -35,7 +35,7 @@ Kount Kondet Count  //读数
   Basic.Numeric.Vector:l ll lll llll
   Basic.Numeric.Lector:- -- --- ----
   Fondiz: f ff fff ffff
-  Tryantis:t tt ttt tttt
+  Tryics:t tt ttt tttt
 
 Screen.ErickPixed
 Single~Globe
@@ -81,7 +81,7 @@ HumanKareer:Electric.DigitSigal.Fondket.Trykodye //个量 度数
   GlobalHabit.FromLeft.RighHand.Write
     bin.num:  //mind the l O 
       0 1
-    *duplicate 00 11
+    *duplicate 00 11 aa bb
       dup 
     chr:asc
       ab ba
