--- a/Analytical/gist/hypertext.html
+++ b/Analytical/gist/hypertext.html
@@ -1,37 +1,9 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <style type="text/css">
-    textarea
-    {
-      overflow-x: hidden;
-      overflow-y: auto;
-      resize: none;
-    }
-    textarea::-webkit-scrollbar
-    {
-      /*滚动条整体样式*/
-      width: 14px; /*高宽分别对应横竖滚动条的尺寸*/
-      height: 14px;
-    }
-    textarea::-webkit-scrollbar-thumb
-    {
-      /*滚动条里面小方块*/
-      border-radius: 5px;
-      -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-      background: rgba(0,0,0,0.2);
-    }
-    textarea::-webkit-scrollbar-track
-    {
-      /*滚动条里面轨道*/
-      -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-      border-radius: 0;
-      background: rgba(0,0,0,0.1);
-    }
-  </style>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body style="background-color: #00FF33;">
-  <textarea spellcheck="false" style="background-color: #00FF99; width: 100%; height: 100%;
-    border: 1 solid gray; margin: 0 0 0 0; font-size: 17px;">
+<body style="">
+  <textarea style="">
 剧变 
 　　四大名著   荷马史诗 奥德赛 一千零一夜
 　　hailGaoketer
@@ -88,6 +60,7 @@ Results （Exp)
 Dice：疑 审视
 剪鱼中 当有 其他 action 疼痛
 </textarea>
-  <script src="fundematic.js" type="text/javascript"></script>
+  <script src="textarea.js" type="text/javascript"></script>
+    <script src="fundametal.js" type="text/javascript"></script>
 </body>
 </html>
