Erick Intelligence Camery Sumit

--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -32,7 +32,7 @@ HΔW(M&m 宏观和微观 HΦW VesaidΔSolid Focused）
   倒转|wjcking.rotate
   动态文字 方向 动态发音
   Where What when?
-  Which （for fuck from language to program）
+  Which （for foc from language to program）
   I = In~div-i.?.dual 我 substance rate balance lever 爱 a
   Who  Whom Whose? 
   why How
