--- a/Analytical/analytical/Leonic/fond-measure.html
+++ b/Analytical/analytical/Leonic/fond-measure.html
@@ -26,39 +26,33 @@
 
 钫得
   维克里 锂面 边维 
-  内部不空 就是一个钲钫点   
-    正 
-   
-    人类角度用笔度以下 可以看作是一个正方形没中空
-    正1正2 
-    正3正4
-    维克里.空 
+  内部不空 就是一个钲钫点   人类角度用笔度以下 可以看作是一个正方形没中空
+    正  正正  
+          正正
+    维克里.空 // heng shui born ？ Dragged dig in
       度四个点 手从左到右 在上或下
-    正正正
-    正   正
-    正正正
+    正正正 正正正
+    正   正  正正正
+    正正正 正正正
     维利视图 边 上下左右 边里推复制 角往中心复刻 直接复刻 
     正 正 正 正     正 正 正 正
-    正          正     正          正
-    正          正     正          正
-    正 正 正 正     正 正 正 正
-
-     正1正2 正1正2 正1正2 正1正2
-     正3正4 正3正4 正3正4 正3正4
-     正1正2                          正1正2
-     正3正4                          正3正4
-     正1正2                          正1正2
-     正3正4                          正3正4
-     正1正2                          正1正2
-     正3正4                          正3正4
-     正1正2 正1正2 正1正2 正1正2
-     正3正4 正3正4 正3正4 正3正4
+    正          正     正 正 正 正
+    正          正     正 正 正 正
+    正 正 正 正     正 正 正 正 
   维里克斯 //四
 
 偏差与空间偏移
-  钫得平面最小维颗粒 中心实体 达成一致
-    边长定义唯一实体
-    九个中间为空 十二个 四个中空
+文明
+  古代刻画工具 
+  可变且伸缩性测量工具发明历史
+  几何 考试 测量 建筑
+  计算机视觉偏差
+
+  钫得平面最小维颗粒 中心实体 达成一致 
+  人类角度.视力 点.就是看作是一个正方形用笔从头开始结束，起始位置应该正方圈起来为1个单位 圆是不能圈的
+    定义边长唯一实体
+    八个中间为空  十二个 四个中空
+    正方形边是1的2次加 3倍 数  中空
     正正正 正正正正角
     正    正 正          正
     正正正 正    中   正
@@ -68,8 +62,14 @@
       锂面：视觉区分 外边 铯中 内边
       全  边铯 全为 1 
   正方形
-    边定义为1 中空 如果定义为面积公式 1 * 1 1X1 串空间 
-    当边长定义为2 边长 * 边长 = 4 个 是 面积吗？
+    *边定义为1 中空! 如果定义为面积公式 1 * 1 != 1平方 1X1 串空间 
+      中空! 不应该定义为1 
+      人类角度 如果中空 为1 
+        *单位必须算上 肉眼能分辨 例子：1 平方毫米 1平方米  那就不是1 国际单位 1*10
+        1像素 平方 用01描绘正方形
+      莱昂尼克
+        就不是人眼睛能分辨 有1但不适地球可以定义 艾昂尼克 钫得1
+    当边长定义为2 边长 * 边长 = 4平方 = 16 十字面切 一格4 个 
       如果是不同大小 边长都是2
       边长定义为2 
       面积 不适 边长2 * 边长2 
@@ -80,7 +80,7 @@
        先画一个然后复制 
       左右 下 左右 或 上 左右 边贴
       瑞博尔 别干扰其他
-      正方形：边长 为个 2 *2 =4个
+      正方形：边长 为个 2 *2 =4个 4平方
       中间的面 每一个是1吗？
         为面积应该不准确
         按照钫得中心 四个为一组
