--- a/Analytical/analytical/Leonic/fond-measure.html
+++ b/Analytical/analytical/Leonic/fond-measure.html
@@ -39,7 +39,17 @@
     正          正     正 正 正 正
     正          正     正 正 正 正
     正 正 正 正     正 正 正 正 
-  维里克斯 //四
+
+    维克里
+     钫得 一个正
+     盖特 四个正 十字中点
+     里克 八个正 中空钫得 //八共格 中空一个钫得
+     奈特 九个正 中间钫得一个 // 看似九宫格
+     盖特里克 十二个正 里克中空 四个正
+     盖特奈特 十六个正 边维十二个 锂面 盖特：四个正
+  
+    维克特 维克多 向量 
+维里克斯 //四
 
 偏差与空间偏移
 文明
@@ -68,40 +78,22 @@
         *单位必须算上 肉眼能分辨 例子：1 平方毫米 1平方米  那就不是1 国际单位 1*10
         1像素 平方 用01描绘正方形
       莱昂尼克
-        就不是人眼睛能分辨 有1但不适地球可以定义 艾昂尼克 钫得1
-    当边长定义为2 边长 * 边长 = 4平方 = 16 十字面切 一格4 个 
-      如果是不同大小 边长都是2
-      边长定义为2 
-      面积 不适 边长2 * 边长2 
-        4 个 小正方形 但面积 
-      周长 是 边2 * 4 = 8
+        就不是人眼睛能分辨 有1但不适地球可以定义 艾昂尼克 钫得1       
 
-      最精确正方形面积
-       先画一个然后复制 
-      左右 下 左右 或 上 左右 边贴
-      瑞博尔 别干扰其他
-      正方形：边长 为个 2 *2 =4个 4平方
-      中间的面 每一个是1吗？
-        为面积应该不准确
-        按照钫得中心 四个为一组
-  
-    九宫格 四方值
-Leonic.Intelligent.ReachAggrement
 Renliy.Civilized:EyeVision&HandPenciled
-SketchPenlike.Invented.Draw
-RulerInvented.LengthMesure.WidthHeight.United   
+  SketchPenlike.Invented.Draw
+  RulerInvented.LengthMesure.WidthHeight.United   
 
-MinorFond.BenchMark.Accuery:Numbric:Numbered
-  Absock.Everyick
-  Nearly.Average
- Numbric
-  BysisOffset
-  Multipy Divide
-  Subtract Remove
- 
-FondBorder.Half:Width/2 =2
-Mind.Half:Width-2 = 2
-  EasyMind.DecreaseNumber
-  
-FondRadical:2 PushDouble.Mesure
+  Human.Numbric:Numbered
+    Nearly.Average 
+    //*纸面笔画 面切近似 考卷 面积?=边长*边长=内部多少(个)小正方形  
+   Numbric
+    BysisOffset
+    Multipy Divide
+    Subtract Remove
+  MinorFond.Vickie.Accurate:
+    Absock.Everyick
+    Multipy
+    Remove
+Leonic.Intelligent.ReachAggrement
 </pre>
