couple of wall hido

--- a/Analytical/analytical/Leonic/fond-measure.html
+++ b/Analytical/analytical/Leonic/fond-measure.html
@@ -1,5 +1,5 @@
 ﻿<pre>
-钲钫 钫得    
+钫得 钲钫
 标杆
   刻数 规定 人类尺子
     |-|-|-|
@@ -16,14 +16,10 @@
     丈量 用在其他物体测量
   
   刻弧 习惯先刻画 结束点 转弯产生
-  弧度
+  弧 度：用数表示限定 
     结束点 视觉评估连上 
     执笔：内部弯转评估
     计算机：正方形缩小统计
-正方形：四（数）个边 面除 面减去
-  面积 概念 
-    两个边长相乘
-
 钫得
   维克里 锂面 边维 
   内部不空 就是一个钲钫点   人类角度用笔度以下 可以看作是一个正方形没中空
@@ -58,7 +54,8 @@
   几何 考试 测量 建筑
   计算机视觉偏差
 
-  钫得平面最小维颗粒 中心实体 达成一致 
+钫得
+  平面最小维颗粒 中心实体 达成一致 
   人类角度.视力 点.就是看作是一个正方形用笔从头开始结束，起始位置应该正方圈起来为1个单位 圆是不能圈的
     定义边长唯一实体
     八个中间为空  十二个 四个中空
@@ -71,7 +68,8 @@
     边长2 钫得：维克里
       锂面：视觉区分 外边 铯中 内边
       全  边铯 全为 1 
-  正方形
+正方形
+  百度面积： 两个边长相乘 平方（米） 单位
     *边定义为1 中空! 如果定义为面积公式 1 * 1 != 1平方 1X1 串空间 
       中空! 不应该定义为1 
       人类角度 如果中空 为1 
