--- a/Analytical/celly-gist/hypertext.html
+++ b/Analytical/celly-gist/hypertext.html
@@ -1,12 +1,14 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<!--<meta name="fullscreen" content="yes"/>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta name="fullscreen" content="yes"/>
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="x5-fullscreen" content="true"/>
-<meta name="fullscreen" content="yes"/>-->
+<meta name="fullscreen" content="yes"/>
+　<meta name="viewport"content="width=device-width,initial-scale=1"/>
 </head>
 <body style="" id="body">
-  <textarea style="" id="tea">
+  <textarea style="" id="tea"; spellcheck= "false" >
 勇士队今天做客亚特兰大，面对缺兵少将的老鹰，勇士队没有展现出过人的姿态，比赛打得有来有回，双方首节战平，上半场勇士还领先2分。第三节结束勇士还凭借库里的压哨三分领先了3分。
 
 进入末节勇士队的替补球员表现不佳，老鹰队这边路威作为板凳先锋，第四节独得12分，库里重新登场后连续得分，但老鹰队在获得优势后没有给勇士机会，最终勇士队以111-117客场败北，最近3场比赛遭遇了3连败。
@@ -23,6 +25,7 @@
 
 其实库里在输给热火队的比赛赛后就曾经说过，过早的犯规会降低球队的侵略性，但今天球队在犯规方面并没有什么改观。面对这样的情况，库里也有些无语了，“我真不知道怎么办了，我已经是第20次被问到这样的问题了。（如何解决犯规问题）”
 科尔也是一样，面对球队的犯规没什么招式，“如果我有办法我就告诉你了，我们每天都在讨论这个问题，我们输掉比赛就是因为犯规太多，我们在场上真的缺乏纪律性！”科尔说道。不过科尔的无奈与库里的无奈不同的是，科尔您可是球队的主教练的，主教练不就是用来解决这些问题的吗，您如今都黔驴技穷了，要不能者上庸者下？
+
 </textarea>
   <script src="fundametal.js" type="text/javascript"></script>
   <script src="textarea.js" type="text/javascript"></script>
