--- a/Rastera/asnic/rastera/fragment.html
+++ b/Rastera/asnic/rastera/fragment.html
@@ -25,8 +25,8 @@
 @ Leonic.Language.Atoz.Nunderground
 @ bath.with.mother.essay
 @ Saykast.LoveMake.Accompany
-@wjcking.leg-let.prostate.html.sharpangle.quota
-@water.boolean.human-orgin:dingyu.korrect.sex
+@ Wjcking.leg-let.prostate.html.sharpangle.quota
+@ Water.boolean.human-orgin:dingyu.Caret.sex
     KolorName.FlowerLeft
   Group.Culture
   GroupAid Pleasure 
