--- a/Analytical/analytical/Leonic/fond-measure.html
+++ b/Analytical/analytical/Leonic/fond-measure.html
@@ -15,8 +15,10 @@
   对比
     丈量 用在其他物体测量
   
-  刻弧 习惯先刻画 结束点 转弯产生
-  弧 度：用数表示限定 
+  画弧 习惯先  转弯产生结束点 
+  弧度：百度 角度转弧度 π/180×角度;弧度变角度 180/π×弧度。 角度是用以量度角的单位,符号为° PI3.14 
+    封闭起来测量 
+  角度：人类 接近角最小给定数或符号
     结束点 视觉评估连上 
     执笔：内部弯转评估
     计算机：正方形缩小统计
