--- a/Analytical/celly-gist/hypertext.html
+++ b/Analytical/celly-gist/hypertext.html
@@ -1,31 +1,11 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <meta name="fullscreen" content="yes"/>
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="x5-fullscreen" content="true"/>
-<meta name="fullscreen" content="yes"/>
-　<meta name="viewport"content="width=device-width,initial-scale=1"/>
+  <script type="text/javascript" src="../models/constant.js"></script>
 </head>
 <body style="" id="body">
-  <textarea style="" id="tea"; spellcheck= "false" >
-勇士队今天做客亚特兰大，面对缺兵少将的老鹰，勇士队没有展现出过人的姿态，比赛打得有来有回，双方首节战平，上半场勇士还领先2分。第三节结束勇士还凭借库里的压哨三分领先了3分。
-
-进入末节勇士队的替补球员表现不佳，老鹰队这边路威作为板凳先锋，第四节独得12分，库里重新登场后连续得分，但老鹰队在获得优势后没有给勇士机会，最终勇士队以111-117客场败北，最近3场比赛遭遇了3连败。
-本场比赛库里在进攻端的表现非常出色，23投12中，拿到了37分5篮板2助攻2抢断的数据，不过美中不足的是库里今天出现了8次失误，正如科尔赛后所说的那样，库里今天的状态不在最佳，但他已经为胜利拼尽了全力。“今晚他的失误确实很成问题，但他在疯狂地竞争，他尽力了，他为胜利做了一切努力。”科尔说道。确实库里最近尾椎骨的伤势还没好利索，但最近库里出战的3场比赛他真的很拼，3场轰下了105分，比赛场均35分，正负值合计+26，但勇士队却只有1胜2负的战绩。
-追梦格林今天的数据不错，11分7篮板11助攻4抢断，但在追梦身上还是那个问题，他的进攻欲望很低，而且对手已经把放空他作为常规赛的防守策略了。今天赛场上就出现了一个尴尬的画面，在第四节还剩不到5分钟的时候，追梦持球的时候，方圆3米之内没有防守球员，这时候他没有选择出手，而是将球给到了无球跑动过来的库里，库里抛投不中。
-
-这样的情况在勇士队的比赛中已经算是常态了，诚然追梦在其他方面的作用非常关键而且表现也相当不错，但这样的情况对于球队来说是一种巨大的伤害，这样的情况在其他球队中是很难见到的场面，在当下各支球队和每一位球员都在重视三分的情况下，追梦这边的外线进攻欲望对于勇士队来说是一个困扰球队两三年的老大难了。
-维金斯与乌布雷在今天也有不错的表现，维金斯12投6中，效率不错，拿到了16分5篮板2助攻2抢断的数据。乌布雷一改前几场的低迷16投9中，三分球6投2中，拿到了全队第二高的20分外加11篮板2助攻2抢断的数据。
-
-怀斯曼今天面对卡佩拉非常吃力，9投4中拿到了8分5篮板的数据，今天科尔只给了他18分钟的出场时间。卡佩拉呢，今天就像奥尼尔，有24分18篮板的大号两双数据。科尔赛后表示今天只给怀斯曼18分钟的出场时间是因为对位的问题，潜台词就是不想让怀斯曼被卡佩拉教训得太惨，毕竟此前的几场比赛对于怀斯曼来说自信心挫伤不小。
-在首发球员打得都还行的情况下，勇士队今天为啥还会输球呢？替补席今天的表现可以说是灾难级别的。板凳席上出场的5人合计只有19分进账，反观老鹰队这边，替补席上仅仅加里纳利与路威两人就合砍40分了。而且今天板凳席上的犯规成为了球队输球的重要原因。
-全场比赛勇士队全队合计26次犯规，其中妹夫出场23分钟4次犯规，卢尼16分钟2次犯规，普尔16分钟3次犯规，贝兹莫尔16分钟4次犯规，安德森5分半钟3次犯规…此外首发阵容中乌布雷与维金斯分别有5次和3次犯规，追梦1次犯规，库里则没有犯规。
-
-
-其实库里在输给热火队的比赛赛后就曾经说过，过早的犯规会降低球队的侵略性，但今天球队在犯规方面并没有什么改观。面对这样的情况，库里也有些无语了，“我真不知道怎么办了，我已经是第20次被问到这样的问题了。（如何解决犯规问题）”
-科尔也是一样，面对球队的犯规没什么招式，“如果我有办法我就告诉你了，我们每天都在讨论这个问题，我们输掉比赛就是因为犯规太多，我们在场上真的缺乏纪律性！”科尔说道。不过科尔的无奈与库里的无奈不同的是，科尔您可是球队的主教练的，主教练不就是用来解决这些问题的吗，您如今都黔驴技穷了，要不能者上庸者下？
-
+  <textarea style="" id="tea" spellcheck="false">
 </textarea>
   <script src="fundametal.js" type="text/javascript"></script>
   <script src="textarea.js" type="text/javascript"></script>
