北京 热力大厦 头丁

--- a/Rastera/asnic/rastera/chorno-kater/geographic.htm
+++ b/Rastera/asnic/rastera/chorno-kater/geographic.htm
@@ -14,4 +14,12 @@ Uran.AdisHoles
     @抽元素 辣细 
     @齐尔诺贝利
 BrainDiggpresion.RussaDeephole
+
+多米斯
+   柏拉图 物镜
+刮羊油 起司
+    @DreamWeaver
+    @Vessels Testicals
+红肉洛基子弹伤口
+    西行平腰 
 </pre>
