--- a/Rastera/asnic/rastera/chorno-kater/isodek.html
+++ b/Rastera/asnic/rastera/chorno-kater/isodek.html
@@ -1,3 +1,10 @@
 ﻿<pre>
-
+泄密与王丹
+    墙 虹囚十昌 //Fan Under
+塞纳
+    源起无心 铯金 //Altaeth
+    双丁叶子裙 罗斯型光 赛加甲 半圆排 //PI Ayfreak
+    空气炸锅· 
+真主电光剑 //DiceApplo Null opleon
+    穿梭古 钏锁骨 莱特胸底
 </pre>
