--- a/Rastera/asnic/rastera/chorno-kater/seymen-karet.html
+++ b/Rastera/asnic/rastera/chorno-kater/seymen-karet.html
@@ -1,4 +1,19 @@
 ﻿<pre>
+ManErect.And.Eject
+    FirstPrematureEject
+    Hand
+    Intercoarse
+    Phi
+    Sperm.Phermon:EarthTrikon
+    DumpLocate(Earth.IonMislead Ayonick Leonic.ShallowHollow)
+        Self-Confining
+        Outside
+        Uterus
+WhenSnic.HowMetrick
+    VOS TimeTrykolor,StarGist GalayKinect OckasionWave
+   Time Before Born After Geographic.GrabHipping
+   AOP
+   PossessFunction 
 Sperm-Swallow.Coreket.Thoughts
     MouthEaten
         Thinking.Expermentals
