--- a/Rastera/asnic/rastera/chorno-kater/karacter.htm
+++ b/Rastera/asnic/rastera/chorno-kater/karacter.htm
@@ -13,5 +13,27 @@
     为自由宣战
     演讲中的弘围错误引顺与观众鉴别
         自我 提醒 纠正 反馈 方法 proper=g-and
-
+    关键字 PI WCK LadderDrag
+        太阳 余玄值
+        水母
+        排地钢 黑 族囚 林格 氯铯 词偶十 金数 拉交丝
+阿波罗与古里亚
+    骨裂鸭 // Skull in
+    骨头裂开亚洲（哲）
+    受惊地卵于值舞性囚 //Egg Planet
+ 中脑裂
+    行计星月 //C+
+    肉骰子
+    毒厂 //Kar sin no
+    妈陆 //Mars Phere 黑手挡
+开瑞博尔
+    眼中钉调研
+艾塔磨斯 //Atmos Adverse
+    三角咒 //
+    @ Pea Rhea
+    @ Mars Rya Wargen
+    把西方 不+土- 
+    猪卤(脑)铯了木
+    咒思 几已泽似 共济会 [. ]
+    金属拉丝 //Spain Port Zeus Poor 十 Rich
 </pre>
