--- a/Analytical/index.html
+++ b/Analytical/index.html
@@ -150,7 +150,13 @@
                 this.setSelectionRange(start + indent.length, start
                         + selected.length);
               }
-            })
+        })
+
+        function a(p) {
+            document.write(arguments.length);
+            document.write(p);
+        } 
+        a("abc");
   </script>
 </body>
 </html>
