--- a/Rastera/asnic/rastera/chorno-kater/karacter.htm
+++ b/Rastera/asnic/rastera/chorno-kater/karacter.htm
@@ -28,7 +28,7 @@
     妈陆 //Mars Phere 黑手挡
 开瑞博尔
     眼中钉调研
-艾塔磨斯 //Atmos Adverse
+艾塔磨斯 //Atmos Antverse
     三角咒 //
     @ Pea Rhea
     @ Mars Rya Wargen
