fond bejing back

--- a/Analytical/analytical/Leonic/fond-measure.html
+++ b/Analytical/analytical/Leonic/fond-measure.html
@@ -16,12 +16,13 @@
     丈量 用在其他物体测量
   
   画弧 习惯先  转弯产生结束点 
-  弧度：百度 角度转弧度 π/180×角度;弧度变角度 180/π×弧度。 角度是用以量度角的单位,符号为° PI3.14 
-    封闭起来测量 
-  角度：人类 接近角最小给定数或符号
     结束点 视觉评估连上 
     执笔：内部弯转评估
+    圆规：中心点转画
     计算机：正方形缩小统计
+  角度：人类 接近角最小给定数或符号
+  弧度：百度 角度转弧度 π/180×角度;弧度变角度 180/π×弧度。 角度是用以量度角的单位,符号为° PI3.14 
+    封闭起来测量 
 钫得
   维克里 锂面 边维 
   内部不空 就是一个钲钫点   人类角度用笔度以下 可以看作是一个正方形没中空
