--- a/Rastera/asnic/rastera/chorno-kater/geographic.htm
+++ b/Rastera/asnic/rastera/chorno-kater/geographic.htm
@@ -1,11 +1,12 @@
 ﻿<pre>
-UIBE.3M3S
+对外经贸 美廉美
+UIBE.3M3S 3G Hexgon Wright
 3Statisfy
 Sorteof
-    Ander-sun Hell Jesus Burger
-    Gava Armacor-Feng
+    Ander-Sun Hell Jesus Burger
+    Gava Armacor-Feng //James Gosling Arm macrophone
     Piorineer
-Brondy.YellowHair
+Blondy.HairYellow
     BrainStem
 Planet.NationalCalling.LanguageDiffer
     Human.PlanetName.Know
@@ -14,12 +15,13 @@ Uran.AdisHoles
     @抽元素 辣细 
     @齐尔诺贝利
 BrainDiggpresion.RussaDeephole
-
+*****************************************************************
 多米斯
    柏拉图 物镜
 刮羊油 起司
     @DreamWeaver
     @Vessels Testicals
-红肉洛基子弹伤口
-    西行平腰 
+西行平腰 
+  红肉洛基子弹伤口
+  日本三角酷 氯气贞操带
 </pre>
