--- a/Rastera/asnic/rastera/chorno-kater/isodek.html
+++ b/Rastera/asnic/rastera/chorno-kater/isodek.html
@@ -5,6 +5,6 @@
     源起无心 铯金 //Altaeth
     双丁叶子裙 罗斯型光 赛加甲 半圆排 //PI Ayfreak
     空气炸锅· 
-真主电光剑 //DiceApplo Null opleon
+针主电光剑 //DiceApplo Null op leon
     穿梭古 钏锁骨 莱特胸底
 </pre>
