--- a/Rastera/asnic/rastera/chorno-kater/karacter.htm
+++ b/Rastera/asnic/rastera/chorno-kater/karacter.htm
@@ -12,7 +12,7 @@
     古巴 冰晶
     为自由宣战
     演讲中的弘围错误引顺与观众鉴别
-        自我 提醒 纠正 反馈 方法 proper=g-and
+        自我 提醒 纠正 反馈 方法 proper-g~and bodypart.stomach's gland
     关键字 PI WCK LadderDrag
         太阳 余玄值
         水母
@@ -20,7 +20,7 @@
 阿波罗与古里亚
     骨裂鸭 // Skull in
     骨头裂开亚洲（哲）
-    受惊地卵于值舞性囚 //Egg Planet
+    受惊地卵 于 值舞性囚 //Egg Planet
  中脑裂
     行计星月 //C+
     肉骰子
@@ -34,6 +34,6 @@
     @ Mars Rya Wargen
     把西方 不+土- 
     猪卤(脑)铯了木
-    咒思 几已泽似 共济会 [. ]
+    咒思 几已泽似 共济会 [. ] //Jesus Jealous
     金属拉丝 //Spain Port Zeus Poor 十 Rich
 </pre>
