--- a/Rastera/asnic/rastera/fragment.html
+++ b/Rastera/asnic/rastera/fragment.html
@@ -6,6 +6,7 @@
 秃头眼睛很邪，但是很孤单的妖精？秃头
 
 翻译
+  悲凉 胆怯 孤独 （still; calm; motionless; silent;） 静（Quite） 寂静 静怡 恬静 安逸 肃静 
   Yaxiyani Niyaxiya
   Euphemistic mild and roundabout;?tactful 圆通的;?euphemistic;
   密集恐惧症
@@ -16,7 +17,6 @@
   意境
   artistic conception;?prospect;
 结束
-
 @ Sexcast.place.object.arrange.alignment
 @ Nymph.Fallout.Queue.Persian-Turk.Language.Diamond.UnderWave
 @ LegShake.BeingCoreget.Alieniate.Power.FlySaurce
@@ -33,9 +33,12 @@
    Event.Stab.Coreget
   //脏阴囊 朋克 Hit Ear the
   
+Atlantis Blue Origin
+　　布林源起
   
 洒
   污漫舱：搭救.膀邪.衡.波纹水平
+  汉国 轴过全 脸型
 酒
 
 网亩酿泥昂
@@ -77,7 +80,7 @@
   妓盅渴 baidu.celly.app.russian:ziyibiqi
 处菲 月经
   men-struct
-  烈眼儿愤青 白灯厢房
+烈眼儿愤青 白灯厢房
   克浪呵
   HemiSphere.
   HemiEarth.SleepEffect
