--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -282,7 +282,7 @@
 
   关键：洞蒿 睡锂房
 
-  校园映射铀 内斗 指挥 战争 基础版本 //SchoolKase Sikoon
+  校园映射铀 内斗 指挥 战争 基础版本 //SchoolKyse Sikoon
   硬地理宏观佷
   关键词：组 族 群 知道-O-不：干的什么事情 铀喉急  
   
