--- a/Rastera/asnic/rastera/scratch.html
+++ b/Rastera/asnic/rastera/scratch.html
@@ -134,7 +134,7 @@ M&m生硬敲笔人 嘴有说G服力 民主主义文化问题
 莱特星顿的枪声 Lexington
 莱特性星盾 佩奇 Fountain
 老鼠找妈妈 Bug incest
-金臬美 （气铅with松散 from
+金臬美 气铅with松散 from
 </textarea>
 </body>
 </html>
