--- a/Rastera/asnic/revenge/ever-vegent.html
+++ b/Rastera/asnic/revenge/ever-vegent.html
@@ -56,7 +56,7 @@ Acm  Reward 、energy sharing  exp
 ?snic Earth Day 7
 
 (时感 时 时间 间隙 空间)->扭曲 校正
-= ?1(脑部 brain 哈特<耗费脑部能量> 提前记录未来1天谁吸走的,重力 或空间 改变用脑部系统想)
+= ?1(脑部 brain 哈特 耗费脑部能量 提前记录未来1天谁吸走的,重力 或空间 改变用脑部系统想)
 
 = ?+2 提前记录未来1天Being被谁吸走的（耗费脑部能量）
 = ?4 (念：gi 源 元 记忆 谁帮我存储的能量数字区间 ?.Otherside )
