--- a/Rastera/asnic/revenge/playweight.html
+++ b/Rastera/asnic/revenge/playweight.html
@@ -8,9 +8,8 @@
 <pre>
 剧变 GeoScript
 
-Anti-Adv-characteristic 
+Anti-Adv-characteristic 　　hailgaoketer
 　　四大名著   荷马史诗 奥德赛 一千零一夜
-　　hailGaoketer
 　　孙子兵法 隆美尔
 宗教公式
 　　佛 怜 法海 意识形态
