--- a/Rastera/asnic/revenge/sneakwing.html
+++ b/Rastera/asnic/revenge/sneakwing.html
@@ -1,13 +1,6 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
-</head>
-<body>
-<textarea>
-拍马屁 AssKissing 巴结人Fattering奉承Flatter :讨好 巴结 迎合
+﻿<pre>
+拍马屁 
+  AssKissing 巴结人Fattering奉承Flatter :讨好 巴结 迎合
     （小 大 终身）T F 男女 三角人 
     直拍 拍后搞 江泽民拍AOP 为钱，女人拍马屁 察言观色
     上升到国家层面 星球牵引 Boundary WhenAsnic 28-30% Attack
@@ -78,6 +71,4 @@ Embarrassed
     物理 Physical		
     deserved	Anti- distract	
 		-->
-</textarea>
-</body>
-</html>
+</pre>
