--- a/Rastera/asnic/revenge/trace.html
+++ b/Rastera/asnic/revenge/trace.html
@@ -1,11 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>追溯 轮回或牵引 (Anti-Adverse-Odimension-Rotate)</title>
-</head>
-<body>
-<textarea>
+﻿<pre>
 Death Or Traction ~ LivingType： 
 Sps 	= being chopped、晕厥感
 Ffs	= being like prostitutes、 sex illness
@@ -62,6 +55,4 @@ Odimetional
 　　Advtisement
 　　GruangGao
 　　Interrupted by what sort of energy 
-</textarea>
-</body>
-</html>
+</pre>
