--- a/Rastera/asnic/rastera/rast/rast.html
+++ b/Rastera/asnic/rastera/rast/rast.html
@@ -11,7 +11,7 @@
         <>()（）〈〉‹›﹛﹜ ［］《》﹝﹞〔〕{}「」【】︵︶︷︸︿﹀︹︺︽︾﹁﹂﹃﹄︻︼
 第三阶段后
 
-  bottom low middle high Redemption //邪毒.?正
+  bottom low middle high Redemption //邪毒 正
   bottom low middle high sprite
   bottom low middle high Distinguishing characters
   bottom low middle high Atlantis Courier
@@ -28,7 +28,6 @@
     小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
     格兰蒂亚 tele-cfs former life
   bottom low middle high 眼 眉  健康
-
   bottom low middle high 党 串 Rositta
   bottom low middle high 困 frame
   bottom low middle high 面困 frame 6 plus	
@@ -39,8 +38,9 @@
   bottom low middle high head&hand off bone Sos white-partial
   bottom low middle high DotEarth Communicate Geo.Interface(Ltsz.Pillar)
   bottom low middle high slept-offend
-    bottom low middle high Paest Tenze 
+  bottom low middle high Paest Tenze 
   bottom low middle high Aysak Issac
+   bottom low middle high 0-9 Inner Leo Show
 开始Rast
 
 Napoléon Bonaparte 贵格派 Quicker Quicker
