--- a/Rastera/asnic/serenity/serenity.html
+++ b/Rastera/asnic/serenity/serenity.html
@@ -1,22 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-    <script src="../../content/jquery/jquery-3.5.1.min.js"></script>
- 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-</head>
-<body>
-
-
-<!--<div id="title" style="margin:0;padding:5px 0 0 10px;height:25px; width:100%; background-color:black;color:white; ">
-    时空意境 
-   <span style="float:right;padding-right:20px;"> <b style="color:gainsboro">Φ</b> 编译</span>
-    -->
-<div id="contain" style="height:1000px;">
-<pre id="editor">
+﻿<pre>
 阿萨尼亚克.维金变形记
   AC时空 光线(能量) 牵引性生命体	
   塞纳时空之美：感知-记忆-回忆-追忆-灵境（过去时~梦）-意境 
@@ -236,39 +218,4 @@
     阿兹特克 负鼠 复 数 
 源起.回溯
 
-Ref-Sense
-　　时空幻境 Fez
-悲凉 胆怯 孤独 （still; calm; motionless; silent;） 静（Quite） 寂静 静怡 恬静 安逸 肃静
-
-　　Atlantis Blue Origin
-　　布林源起
-　　SOS
-　　Sprite Of Snake
-　　Save Our Souls（救救我们）
-　　Save Our Ship（救救我们的船）
-　　The lost of Titanic
-　　Source Origin Start
-　　
-　　西方树精
-　　Mr.Collins
 </pre>
-<div id="compiler">
-    <div id="console"></div>
-    <div id="table"></div>
-    <div id="vector">
-    <!--<svg style="height:0%;"></svg>-->
-    </div>
-</div>
-<div id="commit">
-    <div id="compiled" desc="&234"></div>
-</div>
-</div>
-
-<div id="java"> 
-    <script type="text/javascript">
-       // Asnical = 
-    </script>
-</div>
-</body>
-
-</html>
