--- a/Analytical/analytical/language/russia.html
+++ b/Analytical/analytical/language/russia.html
@@ -11,12 +11,12 @@
             /*background-image: url('kraft/kraft3.jpg');*/
             /*font-size: 18px;*/
             font-family: 'Microsoft YaHei UI';
-            background-color:darkred;
+            background-color: Yellow;
             /*font-weight:bold;*/
         }
         #russia
         {
-            color:white;
+            color:black;
             font-size:16px;
         }
     </style>
