pre couple of removal

--- a/Analytical/analytical/Leonic/fond-tryic.html
+++ b/Analytical/analytical/Leonic/fond-tryic.html
@@ -1,11 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-    <pre>
+﻿<pre>
 //算上边框颜色用了2到3种来区别融合 面切
 Axis.CenterKover
 Flat.Sequence Count.Sum:2(1)
@@ -63,6 +56,4 @@ Area.Computer.Offset
 RectangleMergeTriangle.Analytical.Dotline
 Offset2:GridRectangle4.Direction.BottomFirst.CenterMark
 Offset1:GridRectangle1.Direction.BottomFirst.NoCenterMark
-    </pre>
-</body>
-</html>
+</pre>
