--- a/Analytical/analytical/Leonic/fond.html
+++ b/Analytical/analytical/Leonic/fond.html
@@ -1,11 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-<pre>
+﻿<pre>
 Konpared.R(T)//Compared
 Rotate.Desperse.Regroup
 R[T].Leon.JustRightChange
@@ -54,5 +47,3 @@ Renliy.BodyPart
 Reached.?WaterRoune
 
 </pre>
-</body>
-</html>
