--- a/Analytical/analytical/Leonic/trikon.html
+++ b/Analytical/analytical/Leonic/trikon.html
@@ -1,11 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-<pre>
+﻿<pre>
 Transparent<-Range->Dis-opaque.Nopaque
 Leonic.Trangle.Trikon.Tricylce
      Intelligent:Trikon.ReachedAgreement:
@@ -30,5 +23,3 @@ Flat-Tricycle-Metric
 Leon.Definte.Liscylce
 
 </pre>
-</body>
-</html>
