--- a/Analytical/analytical/absock.html
+++ b/Analytical/analytical/absock.html
@@ -1,6 +1,4 @@
-﻿
-
-<pre>
+﻿<pre>
 Absock.Human.Asck.Utilize.Computer.Requires.Electronic
   Voltage:high,low
   Chip Circit 
@@ -65,7 +63,7 @@ Human.kareer.Essue
   Doctor.ComputerSerialize
 Eassy.Raise.Continue
 
-Human.HandyCapiable.ComputingArt //Afd Artfond
+Human.HandyCapiable.ComputingArt //Afd Artfod
   Article
     Users.OfficeWork
     Developer.PythonLike.ProgrammingStyle
