--- a/Rastera/asnic/access-term/kazidor.html
+++ b/Rastera/asnic/access-term/kazidor.html
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>卡塞尔多</title>
-</head>
-<body>
-<pre>
+﻿<pre>
 伽马.难干：辐射
 赛卡斯特
   群组 瑟雷姒多 公众
@@ -18,5 +12,3 @@
 塞克斯
   .罗塞塔,？贝塞斯达
 </pre>
-</body>
-</html>
