--- a/Rastera/asnic/access-term/phrase.html
+++ b/Rastera/asnic/access-term/phrase.html
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>解释型 Sprints</title>
-</head>
-<body>
-<pre>
+﻿<pre>
   抹布行为
   新疆问题
   母乳喂养Dash（docx）
@@ -73,5 +67,3 @@ SOS
 　　西方树精
 　　Mr.Collins
 </pre>
-</body>
-</html>
