--- a/Rastera/asnic/rastera/kinect-globe/word.html
+++ b/Rastera/asnic/rastera/kinect-globe/word.html
@@ -1,15 +1,5 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-
-<link href="../content/lumia-style/lumia.css" rel="stylesheet" />
-</head>
-<body>
-
-    <pre id="editor">
-    ? β.θ 2020:8:16- 21※
+﻿<pre id="editor">
+? β.θ 2020:8:16- 21※
  
 骨裂剪刀脑神经 面焖 党dang！！！※墙一下
 Lz: e.g.
@@ -258,9 +248,4 @@ IndianUp
 　　  Kaetseof.solid.shape.building.towards.R|P|M
 周永菲
 </pre>
-    <script src="../content/ace-editor/ace.js"></script>
-    <script src="../content/ace-editor/ace-settings.js"></script>
 
-
-</body>
-</html>
