--- a/Rastera/asnic/rastera/kinect-globe/workgroup.html
+++ b/Rastera/asnic/rastera/kinect-globe/workgroup.html
@@ -1,11 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <title></title>
-</head>
-<body>
-  <pre>
+﻿  <pre>
 /1-2:神秘石猴睾丁 WhenDone
     塞卡斯特：打忘 脑控仅仅如此 生命体形式
     
@@ -242,6 +235,7 @@ Left 2  23：08 SleepNot
                 疼传到了愚蠢    
 
          O 艾塞克斯 \O\ 伊莱克斯   /~Standout.LeonQuota~/
+            人类角度：
             人类角度：一眨眼功夫 300年过去 微粒子罗塞塔
             颜色？解决平淡无奇(最底层？） 到奇趣 平坦 
             概念：无生命体不孤独 动态里昂/^Not Standout Style/            
