--- a/Rastera/asnic/access-term/mime.html
+++ b/Rastera/asnic/access-term/mime.html
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-<pre> 
+﻿<pre> 
    EveVision.SuperFacial
    Intrigue
    Absorb
@@ -14,5 +8,3 @@
 
   america.kinghours:nice-stole?=win their hearts //网耗 偷 鑫
 </pre>
-</body>
-</html>
