--- a/Autodesk/desk/ionic-fond.html
+++ b/Autodesk/desk/ionic-fond.html
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
-	<head>
-		<title></title>
-	</head>
-	<body>
-<pre>
+﻿<pre>
 Renliy.Analytick.HeadBrain.Movabilizing
     Aboriginal
       GlobalOriginal
@@ -51,7 +45,6 @@ Renliy.Aboriginal.EyeVision.OpenFront
 
 Leonic:Ionic-Motional~Tricon
 Renlie:Fixed.Movable^Colour
-
 
 Renliy.History.Earth
   WaterLight
@@ -103,8 +96,4 @@ Kolour^Piniket:Paint,Carve//  特质
   Fond.Franket.Found:Fondant //数字.双
   Fondant:Rectend
     March:Level,Quality,Gudge
-    
-
 </pre>
-	</body>
-</html>
