karact pus ksf andyuser

--- a/Analytical/absock/cybert.html
+++ b/Analytical/absock/cybert.html
@@ -31,7 +31,7 @@ WordKlass
     rant rint rand rind rink rank 
     //铯角
     kat kit kad kid kik
-
+    //Axis Axsiz
     *kant kint kand kind kink
   eof
  
