Applo inner house dang drag
1 2 pillar dash
烦 drag 睡 大约 27 8 次

--- a/Analytical/absock/cybert.html
+++ b/Analytical/absock/cybert.html
@@ -2,8 +2,8 @@
 <pre>
 Cybert
   Separator Connector Bracket
-Symbol.Keyboard.Keyset
-  Karact:!@$ //Carect
+Karact //Keyboard.Keyset
+ Symbol:!@$ 
     Keyboard.Symbol
       Char   Half-Angle /!,.$
      Wchar ?consist  Entire-Angle //。，！￥ 
@@ -15,26 +15,27 @@ Organize.Classify
     Verb: Each Batch Group
   Sypole Global
 Dcibt.Bodypart
-    eye-contact ear-listen mouth-speak   mouth-movement nose-dragout
+    eye-contact ear-listen mouth-speak nose-dragout
     hand-write  body-guesture
-Fond Tryick
-  1234
-   one two three four
-   red green blue
-
-WordKlass
+AyricPixel
+  ayric-pixel.html //HumanKareer:Electric.DigitSigal.Fondket.Trykodye
+  erick.html
+FondKlass
+  WoldClass
   stick stack stabled colored     
   foc.eum
-    //钲钫 是否与英文磁性区分开 Find
+    //钫得 分类名 是否与英文磁性区分开 Find
     fant fint fand fink fank
-    矩形 
-    rant rint rand rind rink rank 
+      //矩形 分类名
+      rant rint rand rind rink rank 
     //铯角
     kat kit kad kid kik
-    //Axis Axsiz
-    *kant kint kand kind kink
+    //组合 Axis Axsiz
+    *kac kak knk
+     fak fnk
+       rak rnt 
   eof
- 
+
 Artfod Preditor
     //Line Pine Bine Ketub
     //Row~s Col^s  Rowlet 
