--- a/Analytical/absock/erick.html
+++ b/Analytical/absock/erick.html
@@ -1,6 +1,6 @@
 ﻿<pre>
-
 /************************************************************************
+计算机语言分类总结
 Earth.Human.Language.CivlizeSuperior //ionic-fond.html 56s
 	Ancient.Oracle
 	Original Language Exdistintion
@@ -36,7 +36,7 @@ Translect.VoiceDirect.Interpreter
   Translate:NationalOwned.Translect.AnotherNation
 VariantName.Must.EnglishKaract
 
-结构设计 
+钫得艾瑞克 结构设计
 	//EryicStruct //eng chs turk
 	@钫格 //EricPixel 
 			Dwf.Search 
@@ -106,20 +106,24 @@ VariantName.Must.EnglishKaract
 		例矩:April Festival,由实验室开发的 В институте построены
 		波浪:独立个案 导入 粘贴 
 		编码算法统计 当场记忆
-实现与限识
-	Analytical:AndyUser
-	Pus.Ksf
-	Rec.Hxw // Record
-	Rgp.Wxh //Regroup
 
-	KolorTime PieAmend 
-	Static Basic Ayric Fonctions
-		Aryic Simplist 
-			CellyGis 
-			KomPlus
-		IDE Contrast
-	Kombiling Dynamical Link Library
-		Main(args)
-
+凯尔瑞特:研发:转换 重复标记 //Karact Karlact  
+DeclareNames: Variant Functions Property
+Kovert:Repeat
+  Asckodye 
+    ace1 ace2 kma1 qta1 qta2
+  Escapet
+    escrnt escent escsqt
+LetterCase:
+  Entire: ABC BAC FDSASF
+  Wrap:AaA BbB CcC
+  Central:aAa bBb cCc aaaBBBccc
+  AbA AbC ABC Akma1
+Symbol.Syntax.Attention
+  _ 
+  
+凯尔瑞特:用户 副本 大小写用法
+  $2 ^3 @3 *4 
+  #
 */
 </pre>
