--- a/Analytical/intellisense/intelly.html
+++ b/Analytical/intellisense/intelly.html
@@ -34,4 +34,17 @@ Current-Interest:Device.Research
   moive
   humanly.music
 Andyuser.Anaytick
+
+Pusksf
+	Rec.Hxw // Record
+	Rgp.Wxh //Regroup
+
+	KolorTime PieAmend 
+	Static Basic Ayric Fonctions
+		Aryic Simplist 
+			CellyGis 
+			KomPlus
+		IDE Contrast
+	Kombiling Dynamical Link Library
+		Main(args)
 </pre>
