--- a/AutoDesk/analytical/comsek.html
+++ b/AutoDesk/analytical/comsek.html
@@ -1,11 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <title></title>
-</head>
-<body>
-  <pre>
+﻿<pre>
 *Device:Comsek:Bodypart //Dc I Bt
     kdb:Keyboard(hand)
     mos:Mouse(hand)
@@ -41,7 +34,7 @@
 #Summary.Persection:Dcbt:Advent&Anyuser
     Inner
         Software.Hardware.Drive
-    Outter                
+    Outter 
         Software.Keyboard.Type
         Software.Mouse.Click:left,middle,right
         Hardware.Camera.Software
@@ -65,5 +58,3 @@
  
 
 </pre>
-</body>
-</html>
