--- a/AutoDesk/analytical/isoc.html
+++ b/AutoDesk/analytical/isoc.html
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
-	<head>
-		<title></title>
-	</head>
-	<body>
-<pre>
+﻿<pre>
 
 Pixel-Array
   Isoc:(Pixel(Each,Func Frame:Astar)Draw)Leonic
@@ -40,5 +34,3 @@ Pixel-Array
    *                  墙浴  池墙
    *                  墙墙墙墙墙
 </pre>
-	</body>
-</html>
