--- a/Analytical/absock/ayric-pixel.html
+++ b/Analytical/absock/ayric-pixel.html
@@ -86,6 +86,7 @@ HumanKareer:Electric.DigitSigal.Fondket.Trykodye //个量 度数
       ab ba
       ca ab 
     byc.num-chr chr-num:
+      utility.research:hex like 
       1a 1b  1c1d  
       a1 b1  c1d1
     *tyc.klr 
