--- a/AutoDesk/analytical/delyix.html
+++ b/AutoDesk/analytical/delyix.html
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
-	<head>
-		<title>delyix</title>
-	</head>
-	<body>
-<pre>
+﻿<pre>
 Leonik:SignalKomet.komanSignal:Asniyac
   Solid.Franket.Tryant
   Zero
@@ -123,7 +117,4 @@ Algorith.Kolor.Tryless.Timer
     function pointer 
     function parameter as array  
 Ayendo
-
 </pre>
-	</body>
-</html>
