--- a/Analytical/absock/erick.html
+++ b/Analytical/absock/erick.html
@@ -1,6 +1,5 @@
 ﻿<pre>
-/************************************************************************
-计算机语言分类总结
+凯尔特 计算机语言分类总结
 Earth.Human.Language.CivlizeSuperior //ionic-fond.html 56s
 	Ancient.Oracle
 	Original Language Exdistintion
@@ -69,29 +68,58 @@ VariantName.Must.EnglishKaract
 			a b c yi er san
 		声明关键字和纯钫格
 			*注意：特殊字符 关键字 转换 重复  转义序列 //Cybert.cs
-				
-			用户可以看懂
+      研发声明:变量 数组下标名 函数名 属性名
+        Asck
+          ace1 ace2 kma1 qta1 qta2
+        Escapet
+          escrnt escent escsqt
+      LetterCase:
+        Entire: ABC BAC FDSASF
+        Wrap:AaA BbB CcC
+        Central:aAa bBb cCc aaaBBBccc
+        AbA AbC ABC Akma1
+      Symbol.Declaration&Syntax
+        *Attention: _ ace //下划线  其他应该不可以声明使用 注意空格
+
+			用户可以看懂 调试方便 单框标注方便识别
 				Each letters:
 					a b c d 
 					e f g h
 				Each word:
-					my name is jacky kma_asc_83
-					your age is thrteen dot_asc121
+					my name is jacky kma,her name are mary
+					your age is thrteen 
 				标题：早发白帝城
 					朝 辞 白 帝 彩 云 间 照此白底
 					zhao ci bai di cai yun jian zhao1 ci1 bai1 di1 
 					zcbdcyj //habit ime
-			研发需要转换格式
+
+			研发 声明需要转换格式
 				string
 					a, b, c,d
 					e, f, g ,h
-				short
+        string   //文章声明形式
+          my name1, syx_is, jacky, asc_kma1,her, name2, are, mary
+					your, age, is, thrteen,asc_kma2;
+        string //表格声明格式  两字符 程双duplicate 符
+          //Excel.SheetHeader
+          a1 b1 c1 d1
+          l1 l2 l3 l4 
+        /**************index sub-scripted********************
+				short //index
 					na , nb, nc,nd 
 					na , nb, nc,nd 
+        //array index matric artfod erick archtecture
+        // 1 dynamical prefix suffix 
+        // 2 orginal structed 
+        // 
 				string[] 
-					a,b,c,d 
-				short[] 
-					na,nb,nc,nd 	
+					{ a,b,c,d }				 
+          { a1 b1 c1 d1
+            l1 l2 l3 l4 }
+					{   my name1, syx_is, jacky, asc_kma1,her, name2, are, mary
+					your, age, is, thrteen,asc_kma2; }
+				short[]  //indexed matric
+					{na,nb,nc,nd }	
 	@钫格 32767 ScreenPixel Width Height
 		动态手持视觉水平像素
 		固定像素宽高
@@ -107,23 +135,11 @@ VariantName.Must.EnglishKaract
 		波浪:独立个案 导入 粘贴 
 		编码算法统计 当场记忆
 
-凯尔瑞特:研发:转换 重复标记 //Karact Karlact  
-DeclareNames: Variant Functions Property
-Kovert:Repeat
-  Asckodye 
-    ace1 ace2 kma1 qta1 qta2
-  Escapet
-    escrnt escent escsqt
-LetterCase:
-  Entire: ABC BAC FDSASF
-  Wrap:AaA BbB CcC
-  Central:aAa bBb cCc aaaBBBccc
-  AbA AbC ABC Akma1
-Symbol.Syntax.Attention
-  _ 
+凯尔特:研发:转换 重复标记 //Karact Karlact  
+
   
-凯尔瑞特:用户 副本 大小写用法
+凯尔特:用户 副本 大小写用法
   $2 ^3 @3 *4 
   #
-*/
+
 </pre>
