Ayric Screen Pixel 蔬菜门口 Adv {A}

--- a/Analytical/absock/erick.html
+++ b/Analytical/absock/erick.html
@@ -11,7 +11,7 @@ pfx sfx
 	//~!@#$%^&*()
 	dot: . 0x
 	ace:   
-National Populate
+National.Populate
 	English
 		The 4th of April this year marks the Qingming Festival, an important day on the lunar and pay tributes to their ancestors. 
 	中文
@@ -110,8 +110,9 @@ VariantName.Must.EnglishKaract
 					na , nb, nc,nd 
         //array index matric artfod erick archtecture
         // 1 dynamical prefix suffix 
+        //    type fonk kind rank indexet
         // 2 orginal structed 
-        // 
+        // 3 build each or combine above
 				string[] 
 					{ a,b,c,d }				 
           { a1 b1 c1 d1
@@ -120,7 +121,7 @@ VariantName.Must.EnglishKaract
 					your, age, is, thrteen,asc_kma2; }
 				short[]  //indexed matric
 					{na,nb,nc,nd }	
-	@钫格 32767 ScreenPixel Width Height
+	@钫格  ScreenPixel Width Height 32767
 		动态手持视觉水平像素
 		固定像素宽高
 		索莱得 钫法 地球数学 //Artfod
