--- a/rast/rast/kinect-globe/global-event.html
+++ b/rast/rast/kinect-globe/global-event.html
@@ -1,4 +1,9 @@
-﻿//szn_r^l:2023713
+szn_r^l:2023713
+zzh.gzh_yj
+  chf^s.fsh_la 
+  wes^th.kne^k.lbt^oq.dzh
+hbe.hs
+
 云南 象群北迁 无人机
 衡水中学张锡峰励志演讲上热搜：乡下的土猪，要去拱大城市里的白菜
 中国大使馆时间
