--- a/rast/hlgt/mime.html
+++ b/rast/hlgt/mime.html
@@ -72,7 +72,7 @@ Island Sed OϾ(☾●☽)Ͽ 阴阳之前
 生命体 战争族群 m&M
 Wxad ls simulate 拖延症 except 程序员
 Effect on the other genetic planets
-商学逃 裳削逃 隂羊妊 砖石
+ 裳削逃 隂羊妊 砖石
 
 /******/
 二瘸子 菱形瓦片
@@ -101,7 +101,9 @@ Effect on the other genetic planets
   林友健
   樊志凯 鑫企旺 相似长相
   习小朋 李文东 餐厅推
-汇龙:王洪海
+汇龙
+    王洪海
+    李中海  巴掌
   孟繁信
     李佳 扫把一下
     李维千 投
@@ -110,24 +112,25 @@ Effect on the other genetic planets
   高俊学 安踏鞋 80/2 大麻森
   张书超
   卢国栋 20元 层点
-  林今依    二娃 偷林今依衣服
+  林今依 200  二娃 偷林今依衣服
   孟义
   窦堡垒 
   贾腾飞 20 脚踹
   吴剑龙 偷书
   薛伟
   刘小雨 巴掌
-  杨广轩
+  杨广轩 巴掌
   刘树义
   吴国辉 亲弟弟1个
   李浩伟
-  薛雅光
+  薛雅光 掌巴
   宋世程 
   足球菱形踩
   孙明磊
   赵仕雷
   赵剑 3元
-  
+  商学逃 希红水 盆
+      
   杜鑫 100元 分方便面
   张杰 景县
-  金凤宇 罗光辉 宋火光
+  金凤宇 罗光辉 宋火光 水呛 衣服一交
