--- a/rast/hlgt/mime.html
+++ b/rast/hlgt/mime.html
@@ -109,6 +109,7 @@ Effect on the other genetic planets
     李维千 投
   王浩
   刘阳 到尿
+      刘阳 李超 100
   高俊学 安踏鞋 80/2 大麻森
   张书超
   卢国栋 20元 层点
@@ -116,6 +117,7 @@ Effect on the other genetic planets
   孟义
   窦堡垒 
   贾腾飞 20 脚踹
+      韩志丹 摩托 20
   吴剑龙 偷书
   薛伟
   刘小雨 巴掌
