--- a/rast/hlgt/mime.html
+++ b/rast/hlgt/mime.html
@@ -78,6 +78,7 @@ Effect on the other genetic planets
 二瘸子 菱形瓦片
 春燕 被围打
 弹弓 狗
+陈兴夫 不理
 //李宝兴 小熊猫
 
 李值领
@@ -96,6 +97,7 @@ Effect on the other genetic planets
       周月华 价格 吾主 偏移
   李松
   王小明
+      延俊余 上伤
   李少华 跨下
   李子健 水阀
       
